[gd_scene load_steps=8 format=3 uid="uid://ds1yox0n0d32y"]

[ext_resource type="Script" path="res://scripts/end_screen.gd" id="1_y27oh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4b7sq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x6kit"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hq4fb"]
bg_color = Color(0.549425, 0.15519, 0.168593, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aqbl0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ywcqm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m2w4n"]
bg_color = Color(0.313726, 0.211765, 0.796078, 1)

[node name="end_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y27oh")

[node name="GridContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(400, 380)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.309804, 0.176471, 0.321569, 0)

[node name="MarginContainer" type="MarginContainer" parent="GridContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 100

[node name="ColorRect" type="ColorRect" parent="GridContainer/ColorRect/MarginContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/ColorRect/MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="GridContainer/ColorRect/MarginContainer/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 36
text = "Score: 0"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer/ColorRect/MarginContainer/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Button2" type="Button" parent="GridContainer/ColorRect/MarginContainer/ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_4b7sq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_x6kit")
theme_override_styles/normal = SubResource("StyleBoxFlat_hq4fb")
text = "Main Menu"

[node name="Button" type="Button" parent="GridContainer/ColorRect/MarginContainer/ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/hover = SubResource("StyleBoxFlat_aqbl0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ywcqm")
theme_override_styles/normal = SubResource("StyleBoxFlat_m2w4n")
text = "Next Song"

[connection signal="pressed" from="GridContainer/ColorRect/MarginContainer/ColorRect/VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="GridContainer/ColorRect/MarginContainer/ColorRect/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
